--- a/selectorsRevisit.html
+++ b/selectorsRevisit.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <!-- Selectors Revisited | Understanding How to Select Class and IDs -->
   <title>Selectors Revisit</title>
   <link rel="stylesheet" type="text/css" href="selectors.css">
 </head>
